Adjusting how tournaments are run in parallel to accommodate for variance in server performance.